--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,16 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  position: relative;
 }
 
 .maxWidthWrapper {
+  isolation: isolate;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -18,13 +21,28 @@
   letter-spacing: -0.5px;
 }
 
+.perspectiveBar {
+  position: fixed;
+  top: 60%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: hsl(195deg, 20%, 86%);
+}
+
 .description {
   font-size: 1.25rem;
   margin: 0;
 }
 
 .characterWrapper {
+  position: fixed;
+  left: 60%;
+  top: 0;
+  bottom: 0;
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
